--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.1",
+    "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "swiper": "^12.0.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
